# snstc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SphereNSTC.sln  compileShaders.sh  notes.txt  vcpkg-configuration.json  vcpkg.json
SphereNSTC/: ECS.cpp  ECS.h  EventHandler.cpp  FunctionQueue.h  Graphics.cpp  Graphics.h  InputHandler.cpp  InputHandler.h  Resources.h  SphereNSTC.vcxproj  SphereNSTC.vcxproj.filters  Utils.h  VulkanObjects.cpp  VulkanObjects.h  VulkanUtils.cpp  VulkanUtils.h  main.cpp
SphereNSTC/_ECS/: ECS.h  GameObject.cpp  GameObject.h  World.cpp  World.h
SphereNSTC/_events/: EventHandler.cpp  EventHandler.h
SphereNSTC/_graphics/: Allocator.cpp  Allocator.h  BLAS.cpp  BLAS.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  Device.cpp  Device.h  Fence.cpp  Fence.h  Frame.cpp  Frame.h  Geometry.cpp  Geometry.h  GraphicsHandler.cpp  GraphicsHandler.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IAccelerationStructure.cpp  IAccelerationStructure.h  Image.cpp  Image.h  ImmediateSubmit.cpp  ImmediateSubmit.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RayTracingPipeline.cpp  RayTracingPipeline.h  (+11 more)
SphereNSTC/_inputs/: InputHandler.cpp  InputHandler.h
SphereNSTC/_resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h
SphereNSTC/_utils/: FunctionQueue.h  Math.h  Time.cpp  Utils.h
src/: main.cpp
src/ECS/: ECS.h  GameObject.cpp  (+3 more)
valgrind/: run.sh  suppressions.supp
(+164 files in other folders)
